hydran-1828: Align patch with comfact API.
