# src/integration-test/resources/openapi.yml
@@ -1,13 +1,13 @@
 openapi: 3.1.0
 info:
   title: api-comfact-facade
-  contact: { }
+  contact: {}
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
-  version: "2.1"
+  version: "3.0"
 servers:
-  - url: http://localhost:64389
+  - url: http://localhost:54867
     description: Generated server url
 tags:
   - name: Signings
@@ -238,17 +238,11 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/SigningRequest"
+              $ref: "#/components/schemas/UpdateSigningRequest"
         required: true
       responses:
         "204":
           description: Successful operation
-        "404":
-          description: Not found
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
         "400":
           description: Bad request
           content:
@@ -257,6 +251,18 @@ paths:
                 oneOf:
                   - $ref: "#/components/schemas/Problem"
                   - $ref: "#/components/schemas/ConstraintViolationProblem"
+        "404":
+          description: Not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
+        "409":
+          description: Conflict
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
         "500":
           description: Internal Server error
           content:
@@ -475,7 +481,7 @@ components:
           format: date-time
           description: The date and time when the first reminder should be sent.
           examples:
-            - 2021-12-31T23:59:59Z
+            - 2026-11-22T15:30:00+02:00
       required:
         - enabled
         - intervalInHours
@@ -555,7 +561,7 @@ components:
           format: date-time
           description: The date and time when the signing request expires.
           examples:
-            - 2021-12-31T23:59:59Z
+            - 2026-11-22T15:30:00+02:00
         notificationMessage:
           $ref: "#/components/schemas/NotificationMessage"
           description: Custom message for the signature request emails.
@@ -592,16 +598,16 @@ components:
     Problem:
       type: object
       properties:
+        title:
+          type: string
+        detail:
+          type: string
         instance:
           type: string
           format: uri
         type:
           type: string
           format: uri
-        detail:
-          type: string
-        title:
-          type: string
         status:
           type: integer
           format: int32
@@ -620,13 +626,13 @@ components:
             $ref: "#/components/schemas/Violation"
         title:
           type: string
-        instance:
-          type: string
-          format: uri
         detail:
           type: string
         causeAsProblem:
           $ref: "#/components/schemas/ThrowableProblem"
+        instance:
+          type: string
+          format: uri
     ThrowableProblem:
       type: object
       properties:
@@ -643,7 +649,7 @@ components:
         instance:
           type: string
           format: uri
-        causeAsProblem: { }
+        causeAsProblem: {}
     Violation:
       type: object
       properties:
@@ -660,6 +666,22 @@ components:
           type: object
           additionalProperties:
             type: string
+    UpdateSigningRequest:
+      type: object
+      description: Request for updating a signing instance.
+      properties:
+        expires:
+          type: string
+          format: date-time
+          description: The date and time when the signing request expires.
+          examples:
+            - 2026-11-22T15:30:00+02:00
+        status:
+          type: string
+          description: The status of the signing instance.
+          examples:
+            - active
+            - withdrawn
     Pageable:
       type: object
       properties:
@@ -769,19 +791,19 @@ components:
           format: date-time
           description: The date and time when the signing instance was created.
           examples:
-            - 2021-12-31T23:59:59Z
+            - 2026-11-22T15:30:00+02:00
         changed:
           type: string
           format: date-time
           description: The date and time when the signing instance was last changed.
           examples:
-            - 2021-12-31T23:59:59Z
+            - 2026-11-22T15:30:00+02:00
         expires:
           type: string
           format: date-time
           description: The date and time when the signing instance expires
           examples:
-            - 2021-12-31T23:59:59Z
+            - 2026-11-22T15:30:00+02:00
         document:
           $ref: "#/components/schemas/Document"
           description: Information about the main document to sign.
@@ -826,4 +848,4 @@ components:
           description: The status message
           examples:
             - The signing instance is halted.
-  securitySchemes: { }
+  securitySchemes: {}
